src/App.css
@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0px;
}

body {
  height: 100vh;
  margin: 0;
  font-family: 'Lato', sans-serif;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.phrase {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  font-size: 60px;
  color: black;
  padding-top: 200px;
  font-weight: bold;
}

.main-btns{
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  padding: 200px;
  padding-top: 40px;
}

.main-btns .link {
  color: white;
  height: 100px;
  width: 250px;
  text-align: center;
  padding: 30px;
  text-decoration: none;
  font-size: 35px;
  background-color: rgba(238, 217, 220, 0.6);
  border-radius: 10px;
  margin-right: 15px;
  margin-left: 15px;
}

.main-btns .link:hover {
  background-color: rgb(129, 119, 119, 0.6);
  color:rgb(104, 79, 79);
}

/* Style the header with a grey background and some padding */
.header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  text-align: center;
  overflow: hidden;
  padding: 30px 40px;
}

/* Style the header links */
.header .link {
  float: left;
  color: black;
  text-align: center;
  padding: 12px;
  text-decoration: none;
  font-size: 18px;
  line-height: 25px;
  border-radius: 4px;
}

/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
.header .main {
  font-size: 45px;
  font-family: Brush Script MT;
  color: rgb(68, 48, 25);
  text-decoration: none;
  font-weight: bold;
  float: left;
  margin-left: 35px; 
}

/* Change the background color on mouse-over */
.header .link:hover {
  background-color: #ddd;
  color: black;
}

/* Style the active/current link*/
.header .active {
  background-color: rgb(35, 67, 100);
  color: white;
}

/* Float the link section to the right */
.header-right {
  float: right;
}

/* Add media queries for responsiveness - when the screen is 550px wide or less, stack the links on top of each other */
@media screen and (max-width: 550px) {
  .header .link {
    float: none;
    display: block;
    text-align: left;
  }
  .header .main {
    float: none;
    font-size: 40px;
    text-align: center;
  }
  .header-right {
    float: none;
  }

  .sound-type{
    margin-top: 220px;
    color: white;
  }

  .phrase {
    padding-top: 250px;
    font-size: 20px;
  }
  .main-btns .link {
    margin-left: 5px;
    margin-right: 5px;
  }
}

.player {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-top: 30px;
}

.sound-type {
  padding-top: 30px;
  text-align: center;
}

.sound-container {
  background-color: white;
  width: 380px;
  height: 80px;
  border-radius: 15px;
  box-shadow: 0 20px 20px 0 rgb(252, 169, 169, 0.6);
  display: flex;
  padding: 20px 30px;
  position: relative;
  margin: 100px 0px;
  z-index: 10;
}

.image-container::after {
  content: '';
  background-color: white;
  height: 20px;
  width: 20px;
  position: absolute;
  border-radius: 50%;
  transform: translate(-275%, -65%);
}

.image-container img {
  width: inherit;
  height: 90px;
  border-radius: 50%;
  object-fit: cover;
  position: relative;
  bottom: 50px; 

  animation: rotate 3s linear infinite;

  animation-play-state: paused;
}

.sound-container.play .image-container img {
  animation-play-state: running;
}

@keyframes rotate {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

.navigation {
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 1;
}

.action-btn {
  background-color: white;
  border: 0;
  color: #dfdbdf;
  font-size: 20px;
  cursor: pointer;
  margin: 0 20px;
}

.action-btn-big {
  color: #cdc2d0;
  font-size: 30px;
}

.action-btn:focus {
  outline: 0;
}

.sound-info {
  background-color: rgba(255, 255, 255, 0.5);
  border-radius: 15px 15px 0 0;
  position: absolute;
  top: 0;
  left: 20px;
  width: calc(100% - 40px);
  padding: 10px 10px 10px 150px;
  opacity: 0;
  transform: translateY(0%);
  transition: transform 0.3s ease in, opacity 0.3s ease-in;
}

.sound-info h4 {
  margin: 0;
}

.sound-container.play .sound-info {
  opacity: 1;
  transform: translateY(-100%);
}

.progress-container {
  background: white;
  border-radius: 5px;
  cursor: pointer;
  margin: 10px 0;
  height: 4px;
  width: 100%;
}

.progress {
  background-color: #fe8daa;
  border-radius: 5px;
  height: 100%;
  width: 0%;
  transition: width 0.1s linear;
}

